--- a/julia_0.3/Dockerfile
+++ b/julia_0.3/Dockerfile
@@ -28,6 +28,7 @@ RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && git checkout release-0.3 \
+&& printf "prefix=/usr/local\n\nMARCH=core2\n" > Make.user \
 && make \
 && make install \
 && rm -rf /tmp/julia
