make images smaller

--- a/julia/Dockerfile
+++ b/julia/Dockerfile
@@ -2,38 +2,29 @@ FROM ubuntu:latest
 
 MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
-# Update repos
 RUN apt-get update -qq \
-&& apt-get install -y \
-   software-properties-common \
-&& apt-get install -y --no-install-recommends \
-# Some basic tools
-   mupdf \
-   vim \
-# Julia dependencies and other useful packages
-   bash-completion \
-   bison \
-   curl \
-   debhelper \
    gcc \
    g++ \
    gfortran \
-   git \
    m4 \
-   python \
-   wget
+   make \
+   mupdf \
+   patch \
+   vim-tiny \
+   wget \
+&& apt-get clean
 
-# Download julia from Github
-RUN cd /tmp \
+RUN apt-get install -y --no-install-recommends git \
+&& cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && printf "prefix=/usr/local\n\nMARCH=core2\n" > Make.user \
 && make \
 && make install \
-&& rm -rf /tmp/julia
+&& rm -rf /tmp/julia \
+&& apt-get autoremove -y git \
+&& apt-get clean
 
-# Add user so that no root-login is required; change username and password
-# accordingly
 RUN echo "root:test" | chpasswd \
 && useradd -m j \
 && echo "j:test" | chpasswd \
@@ -44,5 +35,4 @@ ENV HOME /home/j
 WORKDIR /home/j
 USER j
 
-# Make julia run as default process.
 ENTRYPOINT ["/usr/local/bin/julia"]
