--- a/julia/Dockerfile
+++ b/julia/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:latest
 MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
 RUN apt-get update -qq \
+&& apt-get install -y --no-install-recommends \
    gcc \
    g++ \
    gfortran \
