add julia library/package management workflow solution

--- a/julia/Dockerfile
+++ b/julia/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update -qq \
    gcc \
    g++ \
    gfortran \
+   git \
    m4 \
    make \
    mupdf \
@@ -16,16 +17,13 @@ RUN apt-get update -qq \
    wget \
 && apt-get clean
 
-RUN apt-get install -y --no-install-recommends git \
-&& cd /tmp \
+RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && printf "prefix=/usr/local\n\nMARCH=core2\n" > Make.user \
 && make \
 && make install \
-&& rm -rf /tmp/julia \
-&& apt-get autoremove -y git \
-&& apt-get clean
+&& rm -rf /tmp/julia
 
 RUN echo "root:test" | chpasswd \
 && useradd -u 1000 -m docker \
