--- a/julia_0.3/Dockerfile
+++ b/julia_0.3/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update -qq \
    gcc \
    g++ \
    gfortran \
+   git \
    m4 \
    make \
    mupdf \
@@ -17,17 +18,14 @@ RUN apt-get update -qq \
    wget \
 && apt-get clean
 
-RUN apt-get install -y --no-install-recommends git \
-&& cd /tmp \
+RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && git checkout release-0.3 \
 && printf "prefix=/usr/local\n\nMARCH=core2\n" > Make.user \
 && make \
 && make install \
-&& rm -rf /tmp/julia \
-&& apt-get autoremove -y git \
-&& apt-get clean
+&& rm -rf /tmp/julia
 
 # Add user
 RUN echo "root:test" | chpasswd \
