--- a/julia_ivybridge/Dockerfile
+++ b/julia_ivybridge/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update -qq \
    gcc \
    g++ \
    gfortran \
+   git \
    m4 \
    make \
    mupdf \
@@ -24,16 +25,13 @@ RUN apt-get update -qq \
    libglu1-mesa-dev \
 && apt-get clean
 
-RUN apt-get install -y --no-install-recommends git \
-&& cd /tmp \
+RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && printf "prefix=/usr/local\n\nMARCH=core-avx-i\n" > Make.user \
 && make \
 && make install \
-&& rm -rf /tmp/julia \
-&& apt-get autoremove -y git \
-&& apt-get clean
+&& rm -rf /tmp/julia
 
 # Add user
 RUN echo "root:test" | chpasswd \
