--- a/julia_ivybridge/Dockerfile
+++ b/julia_ivybridge/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM debootstrap/debian:testing
 
 MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
@@ -32,7 +32,7 @@ RUN printf "\ndeb http://ftp.de.debian.org/debian testing main contrib non-free\
 RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
-&& printf "prefix=/usr/local\n\nMARCH=ivybridge\n" > Make.user \
+&& printf "prefix=/usr/local\n\nMARCH=native\n" > Make.user \
 && make \
 && make install \
 && rm -rf /tmp/julia
