--- a/julia_ivybridge/Dockerfile
+++ b/julia_ivybridge/Dockerfile
@@ -4,7 +4,18 @@ MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
 RUN printf "\ndeb http://ftp.de.debian.org/debian testing main contrib non-free\n deb-src http://ftp.de.debian.org/debian testing main contrib non-free\n\n deb http://ftp.debian.org/debian/ jessie-updates main contrib non-free\n deb-src http://ftp.debian.org/debian/ jessie-updates main contrib non-free\n\n deb http://security.debian.org/ jessie/updates main contrib non-free\n deb-src http://security.debian.org/ jessie/updates main contrib non-free\n" > etc/apt/sources.list \
 && export DEBIAN_FRONTEND=noninteractive \
+&& printf "\npath-exclude=/usr/share/locale/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-include=/usr/share/locale/en*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-exclude=/usr/share/man/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-include=/usr/share/man/en*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-include=/usr/share/man/man[1-9]/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-exclude=/usr/share/i18n/locales/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-include=/usr/share/i18n/locales/en_IE*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-exclude=/usr/share/i18n/charmaps/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf "\npath-include=/usr/share/i18n/charmaps/UTF-8*\n" >> /etc/dpkg/dpkg.cfg.d/excludes \
 && apt-get update -qq -y \
+&& apt-get install -y --no-install-recommends \
+   locales \
 && apt-get install -y --no-install-recommends \
    bzip2 \
    cmake \
@@ -12,7 +23,6 @@ RUN printf "\ndeb http://ftp.de.debian.org/debian testing main contrib non-free\
    g++ \
    gfortran \
    git \
-   locales \
    m4 \
    make \
    patch \
@@ -27,8 +37,7 @@ RUN printf "\ndeb http://ftp.de.debian.org/debian testing main contrib non-free\
    libopenvg1-mesa \
    libglu1-mesa-dev \
 && apt-get clean \
-&& rm -rf /var/lib/apt/lists/* \
-&& rm -rf /usr/share/locale/*
+&& rm -rf /var/lib/apt/lists/*
 
 RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
