--- a/julia_ivybridge/Dockerfile
+++ b/julia_ivybridge/Dockerfile
@@ -57,7 +57,7 @@ RUN echo "root:test" | chpasswd \
 && groupmod -g 91 video \
 && usermod -a -G video docker \
 && printf "en_IE.UTF-8 UTF-8\n" >> etc/locale.gen \
-&& locale-gen en_IE.UTF-8 \
+&& locale-gen \
 # set vim as default editor; vi-editing mode for bash
 && cd \
 && printf "# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi" > /home/docker/.bashrc \
