--- a/julia_ivybridge/Dockerfile
+++ b/julia_ivybridge/Dockerfile
@@ -56,7 +56,7 @@ RUN echo "root:test" | chpasswd \
 # the container.
 && groupmod -g 91 video \
 && usermod -a -G video docker \
-&& printf "en_IE.UTF-8 UTF-8\n" >> etc/locale.gen \
+&& printf "\nen_IE.UTF-8 UTF-8\n" >> etc/locale.gen \
 && locale-gen \
 # set vim as default editor; vi-editing mode for bash
 && cd \
