--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -40,7 +40,7 @@ RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && git checkout release-0.3 \
-&& printf "prefix=/usr/local\n\nMARCH=native\n" > Make.user \
+&& printf "prefix=/usr/local\n\nMARCH=ivybridge\n" > Make.user \
 && make -j 4\
 && make install \
 && cd \
