remove -j 4 argument to make

--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -41,7 +41,7 @@ RUN cd /tmp \
 && cd /tmp/julia \
 && git checkout release-0.3 \
 && printf "prefix=/usr/local\n\nMARCH=ivybridge\n" > Make.user \
-&& make -j 4\
+&& make \
 && make install \
 && cd \
 && rm -rf /tmp/julia
