--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -41,8 +41,7 @@ RUN cd /tmp \
 && cd /tmp/julia \
 && git checkout release-0.3 \
 && printf "prefix=/usr/local\n" > Make.user \
-&& printf "\nMARCH=ivybridge" > Make.user \
-&& printf "\nARCH=x86_64\n" > Make.user \
+&& printf "\nMARCH=ivybridge\n" > Make.user \
 && make \
 && make install \
 && cd \
