--- a/julia-ivy/Dockerfile
+++ b/julia-ivy/Dockerfile
@@ -39,7 +39,8 @@ RUN printf "\ndeb http://ftp.de.debian.org/debian testing main contrib non-free\
 RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
-&& printf "prefix=/usr/local\n" > Make.user \
+&& printf "prefix=/usr/local" > Make.user \
+&& printf "\nJULIA_CPU_TARGET=core-avx-i" > Make.user \
 && printf "\nMARCH=ivybridge\n" > Make.user \
 && make \
 && make install \
