--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -40,7 +40,8 @@ RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && git checkout release-0.3 \
-&& printf "prefix=/usr/local\n" > Make.user \
+&& printf "prefix=/usr/local" > Make.user \
+&& printf "\nJULIA_CPU_TARGET=core-avx-i" > Make.user \
 && printf "\nMARCH=ivybridge\n" > Make.user \
 && make \
 && make install \
