--- a/julia-ivy/Dockerfile
+++ b/julia-ivy/Dockerfile
@@ -40,8 +40,8 @@ RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
 && printf "prefix=/usr/local" > Make.user \
-&& printf "\nJULIA_CPU_TARGET=core-avx-i" > Make.user \
-&& printf "\nMARCH=ivybridge\n" > Make.user \
+&& printf "\nJULIA_CPU_TARGET=core-avx-i" >> Make.user \
+&& printf "\nMARCH=ivybridge\n" >> Make.user \
 && make \
 && make install \
 && cd \
