--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -41,8 +41,8 @@ RUN cd /tmp \
 && cd /tmp/julia \
 && git checkout release-0.3 \
 && printf "prefix=/usr/local" > Make.user \
-&& printf "\nJULIA_CPU_TARGET=core-avx-i" > Make.user \
-&& printf "\nMARCH=ivybridge\n" > Make.user \
+&& printf "\nJULIA_CPU_TARGET=core-avx-i" >> Make.user \
+&& printf "\nMARCH=ivybridge\n" >> Make.user \
 && make \
 && make install \
 && cd \
