--- a/julia-ivy/Dockerfile
+++ b/julia-ivy/Dockerfile
@@ -58,13 +58,15 @@ RUN echo "root:test" | chpasswd \
 # the container.
 && groupmod -g 91 video \
 && usermod -a -G video docker \
-&& printf "\nen_IE.UTF-8 UTF-8\n" >> etc/locale.gen \
+&& printf "\nen_IE.UTF-8 UTF-8\n" >> /etc/locale.gen \
 && locale-gen \
 # set vim as default editor; vi-editing mode for bash
 && cd \
 && printf "# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n" > /home/docker/.bashrc \
+&& printf "# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n" > /root/.bashrc \
 # Set vi-editing mode
-&& printf "set editing-mode vi\n\nset keymap vi-command\n" > /home/docker/.inputrc
+&& printf "set editing-mode vi\n\nset keymap vi-command\n" > /home/docker/.inputrc \
+&& printf "set editing-mode vi\n\nset keymap vi-command\n" > /root/.inputrc
 
 ENV LANG en_IE.UTF-8
 ENV HOME /home/docker
