" " --> ' ' because of variable expansion

--- a/julia-ivy/Dockerfile
+++ b/julia-ivy/Dockerfile
@@ -3,12 +3,12 @@ FROM brauner/debian:testing
 MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
 RUN export DEBIAN_FRONTEND=noninteractive \
-&& printf "\npath-exclude=/usr/share/locale/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf "\npath-include=/usr/share/locale/en*" >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf "\npath-include=/usr/share/locale/locale.alias" >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf "\npath-exclude=/usr/share/man/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf "\npath-include=/usr/share/man/en*" >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf "\npath-include=/usr/share/man/man[1-9]/*" >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-exclude=/usr/share/locale/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-include=/usr/share/locale/en*' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-include=/usr/share/locale/locale.alias' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-exclude=/usr/share/man/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-include=/usr/share/man/en*' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& printf '\npath-include=/usr/share/man/man[1-9]/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
 && apt-get update -qq -y \
 && apt-get install -y --no-install-recommends \
    locales \
@@ -38,18 +38,18 @@ RUN export DEBIAN_FRONTEND=noninteractive \
 RUN cd /tmp \
 && git clone git://github.com/JuliaLang/julia.git \
 && cd /tmp/julia \
-&& printf "prefix=/usr/local" > Make.user \
-&& printf "\nJULIA_CPU_TARGET=core-avx-i" >> Make.user \
-&& printf "\nMARCH=ivybridge\n" >> Make.user \
+&& printf 'prefix=/usr/local' > Make.user \
+&& printf '\nJULIA_CPU_TARGET=core-avx-i' >> Make.user \
+&& printf '\nMARCH=ivybridge\n' >> Make.user \
 && make \
 && make install \
 && cd \
 && rm -rf /tmp/julia
 
 # Add user
-RUN echo "root:test" | chpasswd \
+RUN echo 'root:test' | chpasswd \
 && useradd -u 1000 -m docker \
-&& echo "docker:test" | chpasswd \
+&& echo 'docker:test' | chpasswd \
 && usermod -s /bin/bash docker \
 && usermod -a -G 100 docker \
 # && usermod -a -G sudo docker \
@@ -60,15 +60,15 @@ RUN echo "root:test" | chpasswd \
 && usermod -a -G video docker \
 && groupmod -g 92 audio \
 && usermod -a -G audio docker \
-&& printf "\nen_IE.UTF-8 UTF-8\n" >> /etc/locale.gen \
+&& printf '\nen_IE.UTF-8 UTF-8\n' >> /etc/locale.gen \
 && locale-gen \
 # set vim as default editor; vi-editing mode for bash
 && cd \
-&& printf "# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n" > /home/docker/.bashrc \
-&& printf "# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n" > /root/.bashrc \
+&& printf '# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n' > /home/docker/.bashrc \
+&& printf '# If not running interactively, don't do anything\n[[ \$- != *i* ]] && return\n\nalias ls='ls --color=auto'\n\nalias grep='grep --color=auto'\n\nPS1='[\u@\h \W]\\$ '\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\n# Enable vi editing mode.\nset -o vi\n' > /root/.bashrc \
 # Set vi-editing mode
-&& printf "set editing-mode vi\n\nset keymap vi-command\n" > /home/docker/.inputrc \
-&& printf "set editing-mode vi\n\nset keymap vi-command\n" > /root/.inputrc
+&& printf 'set editing-mode vi\n\nset keymap vi-command\n' > /home/docker/.inputrc \
+&& printf 'set editing-mode vi\n\nset keymap vi-command\n' > /root/.inputrc
 
 ENV LANG en_IE.UTF-8
 ENV HOME /home/docker
