--- a/julia/Dockerfile
+++ b/julia/Dockerfile
@@ -30,8 +30,8 @@ RUN cd /tmp \
 && printf 'prefix=/usr/local\n\nMARCH=core2\n' > Make.user \
 && make \
 && make install \
-&& cd \
-&& rm -rf /tmp/julia
+&& cd /tmp \
+&& rm -rf julia
 
 RUN echo 'root:test' | chpasswd \
 && useradd -u 1000 -m docker \
