--- a/julia-ivy/Dockerfile
+++ b/julia-ivy/Dockerfile
@@ -3,12 +3,14 @@ FROM brauner/debian:testing
 MAINTAINER Christian Brauner christianvanbrauner[at]gmail.com
 
 RUN export DEBIAN_FRONTEND=noninteractive \
-&& printf '\npath-exclude=/usr/share/locale/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf '\npath-include=/usr/share/locale/en*' >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf '\npath-include=/usr/share/locale/locale.alias' >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf '\npath-exclude=/usr/share/man/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf '\npath-include=/usr/share/man/en*' >> /etc/dpkg/dpkg.cfg.d/excludes \
-&& printf '\npath-include=/usr/share/man/man[1-9]/*' >> /etc/dpkg/dpkg.cfg.d/excludes \
+&& export DEBCONF_NONINTERACTIVE_SEEN=true \
+&& cd /etc/dpkg/dpkg.cfg.d \
+&& printf '\npath-exclude=/usr/share/locale/*' >> excludes \
+&& printf '\npath-include=/usr/share/locale/en*' >> excludes \
+&& printf '\npath-include=/usr/share/locale/locale.alias' >> excludes \
+&& printf '\npath-exclude=/usr/share/man/*' >> excludes \
+&& printf '\npath-include=/usr/share/man/en*' >> excludes \
+&& printf '\npath-include=/usr/share/man/man[1-9]/*' >> excludes \
 && apt-get update -qq -y \
 && apt-get install -y --no-install-recommends \
    locales \
