make use of Docker's new multiple ENV instructions

--- a/julia3-ivy/Dockerfile
+++ b/julia3-ivy/Dockerfile
@@ -68,8 +68,8 @@ RUN echo 'root:test' | chpasswd \
 && printf '\nen_IE.UTF-8 UTF-8\n' >> locale.gen \
 && locale-gen \
 # set vim as default editor; vi-editing mode for bash
-&& cd /home/docker \
-&& printf 'options(repos=structure(c(CRAN='\''http://stat.ethz.ch/CRAN/'\'')))\n' > .Rprofile \
+# && cd /home/docker \
+# && printf 'options(repos=structure(c(CRAN='\''http://stat.ethz.ch/CRAN/'\'')))\n' > .Rprofile \
 # set vim as default editor; vi-editing mode for bash
 # && printf '# If not running interactively, don'\''t do anything\n[[ \$- != *i* ]] && return\n\nalias ls='\''ls --color=auto'\''\n\nalias grep='\''grep --color=auto'\''\n\nPS1='\''[\\u@\h \W]\\$ '\''\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\nexport OPENBLAS_NUM_THREADS=4\n\n# Enable vi editing mode.\nset -o vi\n' > /home/docker/.bashrc \
 # && printf '# If not running interactively, don'\''t do anything\n[[ \$- != *i* ]] && return\n\nalias ls='\''ls --color=auto'\''\n\nalias grep='\''grep --color=auto'\''\n\nPS1='\''[\\u@\h \W]\\$ '\''\n\ncomplete -cf sudo\n\n# Set default editor.\nexport EDITOR=vim xterm\n\nexport OPENBLAS_NUM_THREADS=4\n\n# Enable vi editing mode.\nset -o vi\n' > /root/.bashrc \
@@ -78,9 +78,9 @@ RUN echo 'root:test' | chpasswd \
 && cd /root \
 && printf 'set editing-mode vi\n\nset keymap vi-command\n' > .inputrc
 
-ENV LANG en_IE.UTF-8
-ENV HOME /home/docker
-ENV OPENBLAS_NUM_THREADS 4
+ENV LANG=en_IE.UTF-8 \
+    HOME=/home/docker \
+    OPENBLAS_NUM_THREADS=4
 WORKDIR /home/docker
 USER docker
 
